# Local-Run-Riskun

./: .gitignore  README.md  config.toml  pyproject.toml  run_streamlit.sh
src/: command_runner.py  main.py  run_llm.py
