[project]
name = "riskun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
    "streamlit-ext>=0.1.15",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]
